# binoqlars-schema-analyzer

./: .dockerignore  .eslintrc.json  .gitignore  .pylintrc  Dockerfile  GenericSchema.js  KeysObject.js  README.md  analyzer.js  db.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.test.js  tsconfig.json
.circleci/: config.yml
.github/workflows/: checks.yml
lib/: GenericSchema.ts  KeysObject.ts  db.ts  index.ts
src/: index.ts
src/controllers/: db.py
src/controllers/actions/: action.py  actions_controller.py  email_action.py
src/controllers/checks/: check.py  checks_controller.py  json_check.py  python_check.py
src/controllers/connections/: connection.py  connections_controller.py
src/controllers/logs/: log.py  logs_controller.py
src/keys_object/: keys_object.py
src/utils/: aws_session.py  db.py  secrets.py  singleton.py  slack.py
src/utils/database/: connection.py  mongodb_connection.py
src/utils/db/: db.py
src/utils/email/: functions.py
src/utils/secrets/: MongoDbAtlasSecretsManager.py  mongodbatlas_secrets_manager.py  secrets.py  secrets_manager.py
tests/: test_dummy.py
