[tool.poetry]
name = "binoqlars-schema-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
awslambdaric = "^2.2.1"
boto3 = "^1.35.32"
botocore = "^1.35.32"
pymongo = "^4.10.1"
slack-sdk = "^3.33.1"


[tool.poetry.group.dev.dependencies]
pip-audit = "^2.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
