[tool.poetry]
name = "binoqlars-schema-analyzer"
version = "0.1.0"
description = ""
authors = ["samdouble <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
awslambdaric = "^2.2.1"
boto3 = "^1.35.32"
botocore = "^1.35.32"
pymongo = "^4.10.1"
slack-sdk = "^3.33.1"


[tool.poetry.group.dev.dependencies]
pip-audit = "^2.7.3"
ruff = "^0.6.8"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"
